--- a/Singularity.example
+++ b/Singularity.example
@@ -16,6 +16,6 @@ exec /bin/bash /code/rawr.sh "$@"
 %post  
 echo "This section happens once after bootstrap to build the image."  
 mkdir -p /code  
-apt-get install vim  
+apt-get install python  
 echo "RoooAAAAR" >> /code/rawr.sh
 chmod u+x /code/rawr.sh
